--- a/Cronometro/Pages/Index.razor
+++ b/Cronometro/Pages/Index.razor
@@ -7,4 +7,17 @@
 <button class="btn btn-outline-warning" @onclick="Terminar">Terminar Cronometro</button>
 
 Cronometro : @tiempoAtencion
-
+<SurveyPrompt Title="@tiempoAtencion" />
+<SurveyPrompt Title="@tiempoAtencion" />
+<SurveyPrompt Title="@tiempoAtencion" />
+<SurveyPrompt Title="@tiempoAtencion" />
+<SurveyPrompt Title="@tiempoAtencion" />
+<SurveyPrompt Title="@tiempoAtencion" />
+<SurveyPrompt Title="@tiempoAtencion" />
+<SurveyPrompt Title="@tiempoAtencion" />
+<SurveyPrompt Title="@tiempoAtencion" />
+<SurveyPrompt Title="@tiempoAtencion" />
+<SurveyPrompt Title="@tiempoAtencion" />
+<SurveyPrompt Title="@tiempoAtencion" />
+<SurveyPrompt Title="@tiempoAtencion" />
+<SurveyPrompt Title="@tiempoAtencion" />
